--- a/projects/car_price_prediction/client/app.css
+++ b/projects/car_price_prediction/client/app.css
@@ -73,7 +73,7 @@ h2 {
 	border-radius: 5px;
 }
 
-.location{
+.select-list{
 	font-family: "Roboto", sans-serif;
 	outline: 0;
 	background: #f2f2f2;
@@ -112,8 +112,9 @@ h2 {
 	width: 200px;
 	box-sizing: border-box;
 	font-size: 15px;
-	height: 35px;
+	height: 45px;
 	text-align: center;
+	border-radius: 5px;
 }
 
 .img {
