--- a/styles.css
+++ b/styles.css
@@ -41,6 +41,11 @@ canvas{
     top: 0px;
 }
 
+.about-me {
+    color: #ccc;
+    font-size: large;
+}
+
 .mb{
     margin-bottom: 3rem;
 }
@@ -53,8 +58,8 @@ canvas{
 
 .links-list ul li{
     list-style: none;
-    margin-right: 2rem;
-    font-size: 1.8rem;
+    margin-right: 3rem;
+    font-size: 2rem;
     margin-bottom: 0;
 }
 
@@ -65,7 +70,7 @@ canvas{
 
 .links-list ul li span{
     background-color: #e91e63;
-    font-size: 1.2rem;
+    font-size: 1.5rem;
     border-radius: 10px;
     padding: 3px 6px;
     font-weight: bold;
